--- a/src/pug/components/comment-main.pug
+++ b/src/pug/components/comment-main.pug
@@ -10,7 +10,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="img/comment-photo.png", alt="")
+                                img(src="img/comment1.jpg", alt="")
                         .name-block 
                             h3 Ірина
                             .star-comment  
@@ -35,7 +35,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="img/comment-photo.png", alt="")
+                                img(src="img/comment2.jpg", alt="")
                         .name-block 
                             h3 Андрій
                             .star-comment  
@@ -60,7 +60,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="img/comment-photo.png", alt="")
+                                img(src="img/comment3.jpg", alt="")
                         .name-block 
                             h3 Людмила
                             .star-comment  
@@ -85,7 +85,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="img/comment-photo.png", alt="")
+                                img(src="img/comment7.jpg", alt="")
                         .name-block 
                             h3 Віктор
                             .star-comment  
@@ -110,7 +110,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="img/comment-photo.png", alt="")
+                                img(src="img/comment8.jpg", alt="")
                         .name-block 
                             h3 Павло
                             .star-comment  
@@ -135,7 +135,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="img/comment-photo.png", alt="")
+                                img(src="img/comment4.jpg", alt="")
                         .name-block 
                             h3 Олена
                             .star-comment  
@@ -160,7 +160,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="img/comment-photo.png", alt="")
+                                img(src="img/comment9.jpg", alt="")
                         .name-block 
                             h3 Дмитро
                             .star-comment  
@@ -185,7 +185,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="img/comment-photo.png", alt="")
+                                img(src="img/comment10.jpg", alt="")
                         .name-block 
                             h3 Олександр
                             .star-comment  
@@ -210,7 +210,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="img/comment-photo.png", alt="")
+                                img(src="img/comment6.jpg", alt="")
                         .name-block 
                             h3 Максим
                             .star-comment  
@@ -235,7 +235,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="img/comment-photo.png", alt="")
+                                img(src="img/comment5.jpg", alt="")
                         .name-block 
                             h3 Оксана
                             .star-comment  
