--- a/src/pug/components/general-plan.pug
+++ b/src/pug/components/general-plan.pug
@@ -25,19 +25,19 @@ section.plan
                 span.icon-number 3
                 +svg('pin')
               span.legend__text Торговий центр
+            //- li
+            //-   .legend__icon
+            //-     span.icon-number 4
+            //-     +svg('pin')
+            //-   span.legend__text Медичний центр
             li
               .legend__icon
                 span.icon-number 4
                 +svg('pin')
-              span.legend__text Медичний центр
-            li
-              .legend__icon
-                span.icon-number 5
-                +svg('pin')
               span.legend__text Парк <span class="legend__text--uppercase">Terrase</span>
             li
               .legend__icon
-                span.icon-number 6
+                span.icon-number 5
                 +svg('pin')
               span.legend__text Тераси
         .plan__visual
@@ -56,6 +56,10 @@ section.plan
                 .legend__icon
                   span.icon-number 3
                   +svg('pin')
+              //- li
+              //-   .legend__icon
+              //-     span.icon-number 4
+              //-     +svg('pin')
               li
                 .legend__icon
                   span.icon-number 4
@@ -66,15 +70,11 @@ section.plan
                   +svg('pin')
               li
                 .legend__icon
-                  span.icon-number 6
+                  span.icon-number 5
                   +svg('pin')
               li
                 .legend__icon
-                  span.icon-number 6
-                  +svg('pin')
-              li
-                .legend__icon
-                  span.icon-number 6
+                  span.icon-number 5
                   +svg('pin')
             span.street-left вулиця Подільська
             span.street-right вулиця Свободи
