--- a/src/pug/ru/index.pug
+++ b/src/pug/ru/index.pug
@@ -15,12 +15,12 @@ html(lang="ru")
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
     link(rel='icon' href='img/favicon.ico')
-    link(rel='canonical' href='https://www.grandpalace.km.ua/')
+    link(rel='alternate' href='https://www.grandpalace.km.ua/ru/')
     meta(property="og:title" content="Grand Palace – современное жилье в городе Хмельницкий")
     meta(property="og:description" content="Современный элитный жилой комплекс в центре Хмельницкого. Grand Palace – гарантия твоего удобного проживания с необходимыми удобствами для жизни.")
     meta(property="og:image" content="../img/logo.jpg")
     meta(property="og:type" content="website")
-    meta(property="og:url" content="https://www.grandpalace.km.ua/")
+    meta(property="og:url" content="https://www.grandpalace.km.ua/ru/")
 
   body(tabindex="0")
     .body-wrapper
